--- a/stacks/local/official.docker-compose.yml
+++ b/stacks/local/official.docker-compose.yml
@@ -86,6 +86,11 @@ services:
     labels:
       - traefik.enable=true
 
+      # CORS middleware
+      - traefik.http.middlewares.cors.headers.customresponseheaders.Access-Control-Allow-Origin=*
+      - traefik.http.middlewares.cors.headers.customresponseheaders.Access-Control-Allow-Methods=*
+      - traefik.http.middlewares.cors.headers.customresponseheaders.Access-Control-Allow-Headers=*
+
       # Modern API route
       - traefik.http.routers.api_client_official.rule=Host(`resonite.local`) && PathPrefix(`/api`)
       - traefik.http.routers.api_client_official.entrypoints=web
@@ -97,6 +102,7 @@ services:
       # Public events legacy API v2 route
       - traefik.http.routers.api_v2_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v2`)
       - traefik.http.routers.api_v2_client_legacy_public_official.entrypoints=web
+      - traefik.http.routers.api_v2_client_legacy_public_official.middlewares=cors
 
   web_client_official:
     build: ../..
