--- a/stacks/local/official.docker-compose.yml
+++ b/stacks/local/official.docker-compose.yml
@@ -94,10 +94,12 @@ services:
       # Modern API route
       - traefik.http.routers.api_client_official.rule=Host(`resonite.local`) && PathPrefix(`/api`)
       - traefik.http.routers.api_client_official.entrypoints=web
+      - traefik.http.routers.api_client_official.middlewares=cors
 
       # Public events legacy API v1 route
       - traefik.http.routers.api_v1_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_v1_client_legacy_public_official.entrypoints=web
+      - traefik.http.routers.api_v1_client_legacy_public_official.middlewares=cors
 
       # Public events legacy API v2 route
       - traefik.http.routers.api_v2_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v2`)
