--- a/stacks/prod/docker-compose.yml
+++ b/stacks/prod/docker-compose.yml
@@ -144,26 +144,32 @@ services:
       # Modern API route
       - traefik.http.routers.api_client.rule=Host(`resonite-communities.com`) && PathPrefix(`/api`)
       - traefik.http.routers.api_client.entrypoints=web
+      - traefik.http.routers.api_client.middlewares=cors
 
       # Private events legacy API v1 route
       - traefik.http.routers.api_v1_client_legacy_private.rule=Host(`adult.resonite-communities.com`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_v1_client_legacy_private.entrypoints=web
+      - traefik.http.routers.api_v1_client_legacy_private.middlewares=cors
 
       # Private events legacy API v2 route
       - traefik.http.routers.prod_api_v2_client_legacy_private.rule=Host(`adult.resonite-communities.com`) && PathPrefix(`/v2`)
       - traefik.http.routers.prod_api_v2_client_legacy_private.entrypoints=web
+      - traefik.http.routers.prod_api_v2_client_legacy_private.middlewares=cors
 
       # Private events legacy API v1 route 2
       - traefik.http.routers.api_v1_client_legacy_private2.rule=Host(`adult-events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_v1_client_legacy_private2.entrypoints=web
+      - traefik.http.routers.api_v1_client_legacy_private2.middlewares=cors
 
       # Public events legacy API v1 route
       - traefik.http.routers.api_v1_client_legacy_public.rule=Host(`resonite-communities.com`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_v1_client_legacy_public.entrypoints=web
+      - traefik.http.routers.api_v1_client_legacy_public.middlewares=cors
 
       # Public events legacy API v1 route 2
       - traefik.http.routers.api_v1_client_legacy_public2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_v1_client_legacy_public2.entrypoints=web
+      - traefik.http.routers.api_v1_client_legacy_public2.middlewares=cors
 
       # Public events legacy API v2 route
       - traefik.http.routers.api_v2_client_legacy_public.rule=Host(`resonite-communities.com`) && PathPrefix(`/v2`)
