--- a/stacks/dev/router.docker-compose.yml
+++ b/stacks/dev/router.docker-compose.yml
@@ -13,7 +13,10 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
-      - shared_backend_network
+      shared_backend_network:
+        aliases:
+          - dev.resonite-communities.com
+          - official.dev.resonite-communities.com
 
 networks:
   shared_backend_network:
