--- a/stacks/dev/router.docker-compose.yml
+++ b/stacks/dev/router.docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.web.address=:80"
+      - "--entryPoints.websecure.address=:443"
+      - "--entryPoints.websecure.http.tls=true"
       - "--accesslog=true"
     ports:
       - "80:80"
