--- a/stacks/dev/router.docker-compose.yml
+++ b/stacks/dev/router.docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - certs_shared:/certs_shared:ro
     networks:
       shared_backend_network:
         aliases:
@@ -23,3 +24,7 @@ services:
 networks:
   shared_backend_network:
     name: shared_backend_network
+
+volumes:
+  certs_shared:
+    external: true
