--- a/stacks/dev/official.docker-compose.yml
+++ b/stacks/dev/official.docker-compose.yml
@@ -114,6 +114,8 @@ services:
         condition: service_completed_successfully
       database_official:
         condition: service_healthy
+    ports:
+      - '8100:8000'
     secrets:
       - database_url
       - discord_secret
@@ -166,6 +168,8 @@ services:
         condition: service_completed_successfully
       database_official:
         condition: service_healthy
+    ports:
+      - '8101:8001'
     secrets:
       - database_url
       - discord_secret
