--- a/stacks/local/official.docker-compose.yml
+++ b/stacks/local/official.docker-compose.yml
@@ -87,24 +87,24 @@ services:
       - traefik.enable=true
 
       # CORS middleware
-      - traefik.http.middlewares.cors.headers.customresponseheaders.Access-Control-Allow-Origin=*
-      - traefik.http.middlewares.cors.headers.customresponseheaders.Access-Control-Allow-Methods=*
-      - traefik.http.middlewares.cors.headers.customresponseheaders.Access-Control-Allow-Headers=*
+      - traefik.http.middlewares.local_cors_official.headers.customresponseheaders.Access-Control-Allow-Origin=*
+      - traefik.http.middlewares.local_cors_official.headers.customresponseheaders.Access-Control-Allow-Methods=*
+      - traefik.http.middlewares.local_cors_official.headers.customresponseheaders.Access-Control-Allow-Headers=*
 
       # Modern API route
-      - traefik.http.routers.api_client_official.rule=Host(`resonite.local`) && PathPrefix(`/api`)
-      - traefik.http.routers.api_client_official.entrypoints=web
-      - traefik.http.routers.api_client_official.middlewares=cors
+      - traefik.http.routers.local_api_client_official.rule=Host(`resonite.local`) && PathPrefix(`/api`)
+      - traefik.http.routers.local_api_client_official.entrypoints=local_web
+      - traefik.http.routers.local_api_client_official.middlewares=local_cors_official
 
       # Public events legacy API v1 route
-      - traefik.http.routers.api_v1_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v1`)
-      - traefik.http.routers.api_v1_client_legacy_public_official.entrypoints=web
-      - traefik.http.routers.api_v1_client_legacy_public_official.middlewares=cors
+      - traefik.http.routers.local_api_v1_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v1`)
+      - traefik.http.routers.local_api_v1_client_legacy_public_official.entrypoints=local_web
+      - traefik.http.routers.local_api_v1_client_legacy_public_official.middlewares=local_cors_official
 
       # Public events legacy API v2 route
-      - traefik.http.routers.api_v2_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v2`)
-      - traefik.http.routers.api_v2_client_legacy_public_official.entrypoints=web
-      - traefik.http.routers.api_v2_client_legacy_public_official.middlewares=cors
+      - traefik.http.routers.local_api_v2_client_legacy_public_official.rule=Host(`resonite.local`) && PathPrefix(`/v2`)
+      - traefik.http.routers.local_api_v2_client_legacy_public_official.entrypoints=local_web
+      - traefik.http.routers.local_api_v2_client_legacy_public_official.middlewares=local_cors_official
 
   web_client_official:
     build: ../..
@@ -129,7 +129,7 @@ services:
       - traefik.enable=true
 
       - traefik.http.routers.web_client_official.rule=Host(`resonite.local`)
-      - traefik.http.routers.web_client_official.entrypoints=web
+      - traefik.http.routers.web_client_official.entrypoints=local_web
 
 networks:
   shared_backend_network:
